<resources>

    <string name="app_name">StepUp</string>

  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="forgot_password">Forgot Password?</string>
  <string name="login_caps">LOGIN</string>
  <string name="sign_up">Don\'t have an account? Sign up</string>
  <string name="fab_mentor">MENTOR</string>
  <string name="fab_mentee">MENTEE</string>
    <string name="step_up_and_choose_your_own_path">Step up and choose your own path</string>
</resources>
